# chessX

./: .gitignore
Documentation/System Documentation/: Chess Requirements
include/: board_square.h  game_board.h  globals.h  pos.h
include/chess/: board_square.h  game_board.h  rule_enforcer.h
include/chess/game_pieces/: bishop.h  game_piece.h  king.h  knight.h  null_piece.h  pawn.h  queen.h  rook.h
include/common/: global_decl.h  globals.h  pos.h
include/component/: board_square.h  game_board.h
include/exceptions/: SDL_exceptions.h  board_exceptions.h
include/game_pieces/: game_piece.h  pawn.h
include/media/: SDLDeleter.h  SDLInit.h  draw_object.h  io.h  texture.h  view.h  window.h
project/: CMakeLists.txt
src/: board_square.cpp  board_square.h  game_board.cpp  game_board.h  game_piece.h  main.cpp  pawn.h  pos.h
src/chess/: board_square.cpp  board_square.h  game_board.cpp  game_board.h  game_piece.cpp  rule_enforcer.cpp  rule_enforcer.h
src/chess/game_pieces/: bishop.cpp  bishop.h  game_piece.cpp  game_piece.h  king.h  knight.cpp  knight.h  null_piece.h  pawn.cpp  pawn.h  queen.h  rook.h
src/common/: pos.cpp
src/component/: board_square.cpp  game_board.cpp
src/exceptions/: SDL_exceptions.cpp  SDL_exceptions.h  board_exceptions.cpp
src/game_pieces/: game_piece.cpp
src/media/: SDLDeleter.cpp  draw_object.cpp  draw_object.h  io.cpp  texture.cpp  texture.h  view.cpp  view.h  window.cpp  window.h
test/: board_square.h  game_board.cpp  game_board.h  game_piece.h  globals.h
